# segmentation-5-axis-gcode

./: Makefile  model.stl  output.off
Models/: teapot.off
cgal/: CMakeLists.txt  MeshLoader.h  MeshSegmenter.cpp  main.cpp  stl_reader.h  stl_to_off.cpp
cgal/waste/: MeshLoader.cpp  MeshSegmenter.h  MeshTransformer.cpp  MeshTransformer.h  MeshViewer.cpp  MeshViewer.h
mesh_segmentation/: CMakeLists.txt  main.cpp
mesh_segmentation/cmake/: FindQGLViewer.cmake
src/: goodstuff.txt  stl_viewer.cpp  stl_viewer.hpp
